--- a/public_html/bitrix/templates/bestmaket_new/template_styles.css
+++ b/public_html/bitrix/templates/bestmaket_new/template_styles.css
@@ -5479,6 +5479,9 @@ input:focus {
 	line-height: 1;
 	
 }
+.number-item .pt{
+	padding-top: 44px;
+}
 .number-item.title {
 	    width: 37%;
     padding-top: 28px;
