--- a/public_html/bitrix/templates/bestmaket_new/mobile.css
+++ b/public_html/bitrix/templates/bestmaket_new/mobile.css
@@ -280,6 +280,9 @@
 	width: auto;
 	margin: 15px 0 0;
 }
+.number-section{
+	padding-top: 100px;
+}
 
 .number-item {
 	float: none;
@@ -988,8 +991,16 @@
 }
 .number-item.title {
 	padding-block: 0;
-	padding-left: 20px;
+	padding-left: 24px;
 	width: 100%;
+}
+.number-item.title span {
+    right: 12%;
+    bottom: 6%;
+}
+.number-item .number__title {
+ 
+    margin-bottom: 65px;
 }
 .border-right {
 	border: none;
@@ -1000,13 +1011,14 @@
 .number-item .name {
 	font-size: 20px;
 	line-height: 1;
+	padding-left: 12px;
 }
 .number-item.large {
 	order: 1;
 }
 .number-items .number-item.small .number-container {
-	padding-bottom: 42%;
-	background-size: cover;
+	padding-bottom: 37%;
+	
 }
 .number-item.small {
 	width: 100%;
@@ -1018,7 +1030,7 @@
 }
 .number-items .number-item .number-container {
 	padding-bottom: 0;
-	padding-left: 36px;
+	padding-left: 28px;
 }
 .number__box {
 	width: 100%;
@@ -1028,10 +1040,37 @@
 }
 .number__box .number-item:nth-child(even) {
 	margin-left: auto;
+	margin-top: -14px;
 }
-.number__box .number-item:nth-child(3),
-.number__box .number-item:nth-child(5) {
-	margin-top: -21%;
+.number__box .number-item:nth-child(3)
+ {
+	margin-top: -16%;
+}
+.number__box .number-item:nth-child(5)
+ {
+	margin-top: -12%;
+	width: 75%;
+}
+.number__box .number-item:nth-child(5) .number{
+	margin-top: 4px;
+}
+
+.number__box .number-item:nth-child(4) {
+	width: 68%;
+	margin-top: -18px;
+}
+.number__box .number-item:nth-child(6) {
+	width: 91%;
+	margin-top: 30px;
+}
+.number__box .number-item:nth-child(6) .name {
+	
+	    margin-top: 8px;
+    padding-left: 17px;
+    padding-right: 4px;
+}
+.number__box .number-item:nth-child(4)  .number {
+	padding-left: 10px;
 }
 .number-items .number-item.large .number-container {
 	padding-bottom: 43%;
@@ -1039,6 +1078,9 @@
 }
 .number-item.large {
 	margin-right: 32px;
+}
+.number-item .pt{
+	padding-top:12px;
 }
 .form-green .form-row .inp-text {
 	max-width: 100%;
